Part_1/1.09_more_services/manifests/log_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: log-output
          image: doreen01/mooc-log-output:1.07_ingress
          ports:
          - containerPort: 5000
