Part_1/1.09_more_services/manifests/pong_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        - name: ping-pong
          image: doreen01/mooc-ping-pong:1.09_more_services
          ports:
          - containerPort: 5000
